get tactile-paving info

--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ importlib_metadata==8.7.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+numpy==2.0.2
 oauthlib==3.3.1
 packaging==25.0
 postgrest==1.1.1
@@ -38,6 +39,7 @@ PyJWT==2.10.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytz==2025.2
 realtime==2.5.3
 requests==2.32.4
 requests-oauthlib==2.0.0
@@ -50,6 +52,7 @@ supabase==2.16.0
 supafunc==0.10.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 uritemplate==4.2.0
 urllib3==2.5.0
 websockets==15.0.1
